# miniature-parakeet

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-package.yml
app/agents/: audio_agent.py  image_agent.py  supervisor.py  video_agent.py
app/graph/: workflow.py
app/state/: state.py
app/tools/: mcp_client.py  mcp_server.py
app/tools/processors/: video_processor.py
async_media_agents/: __init__.py
async_media_agents/agents/: __init__.py  audio_agent.py  image_agent.py  supervisor.py  video_agent.py
async_media_agents/graph/: __init__.py  workflow.py
async_media_agents/tools/: mcp_server.py  video_tool.py
async_media_agents/tools/processors/: audio_processor.py  image_processor.py  video_processor.py
miniature_parakeet/: __init__.py
miniature_parakeet/agents/: __init__.py  audio_agent.py  image_agent.py  supervisor.py  video_agent.py
miniature_parakeet/graph/: __init__.py  workflow.py
miniature_parakeet/state/: shared_memory.py
miniature_parakeet/tools/: audio_tool.py  image_tool.py  mcp_server.py
miniature_parakeet/tools/processors/: __init__.py
miniature_parakeet/utils/: requirements.py
scripts/: test_workflow.py
