[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "async-media-agents"
version = "0.1.3"
description = "A multi-agent workflow for processing audio, image, and video data."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Abka012", email = "fergusonabka012@gmail.com"}
]
dependencies = [
    "langgraph",
    "langchain-core",
    "fastmcp",
    "Pillow",
    "opencv-python-headless",
    "numpy",
    "httpx",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "flake8",
    "basedpyright==1.39.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["async_media_agents*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportExplicitAny = false
reportMissingTypeArgument = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnusedCallResult = false
reportUnusedFunction = false
reportPrivateUsage = false
reportAttributeAccessIssue = false
reportDeprecated = false
reportAny = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnusedParameter = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
